--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,19 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+	
+	
+	
+<!-- 	<filter> -->
+<!-- 	    <filter-name>Spring OpenEntityManagerInViewFilter</filter-name> -->
+<!-- 	    <filter-class>org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter</filter-class> -->
+<!-- 	</filter> -->
+<!-- 	<filter-mapping> -->
+<!-- 	    <filter-name>Spring OpenEntityManagerInViewFilter</filter-name> -->
+<!-- 	    <url-pattern>/*</url-pattern> -->
+<!-- 	</filter-mapping>	 -->
+
+
 
 	<!-- Processes application requests -->
 	<servlet>
