--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,7 +14,9 @@
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 	
-	
+	<session-config>
+	  <session-timeout>3</session-timeout> 
+	</session-config>	
 	
 <!-- 	<filter> -->
 <!-- 	    <filter-name>Spring OpenEntityManagerInViewFilter</filter-name> -->
